# Pixel-Art

./: README.md  algorithm.py  bspline.py  heuristic.py  input.py  main.py  output.py  requirements.txt  setup.py  smoothen.py
libdepixelize/: CMakeLists.txt  README  TODO  sanitize.sh
libdepixelize/.bzr/branch/: branch.conf  last-revision
libdepixelize/.bzr/checkout/: dirstate
libdepixelize/.bzr/repository/: pack-names
libdepixelize/src/: CMakeLists.txt  kopftracer2011.cpp  kopftracer2011.h
libdepixelize/src/depixelize-kopf2011/: CMakeLists.txt  main.cpp  render-svg.h
libdepixelize/src/depixelize-kopf2011/priv/2geom/: svg-path-render.h
libdepixelize/src/priv/: pixelgraph.h  point.h
libdepixelize/the algorithmic documentation report/: index.tex
libdepixelize/the algorithmic documentation report/assets/code/: smoothness.cpp  (+1 more)
libdepixelize/the algorithmic documentation report/blog/: part0.tex  part1.tex  part2.tex
libdepixelize/the algorithmic documentation report/src/: extracolor.tex  optimizing.tex  smoothness_code_appendix.tex  tjunction.tex
src/depixelizer/: cmd.py
src/depixelizer/depixelize/: __init__.py  depixelize.py  pixel_data.py
src/depixelizer/geometry/: __init__.py  point.py  shape.py  smoothen.py
src/depixelizer/io/: __init__.py  input.py
src/pixel_art/: __init__.py  algorithm.py  bspline.py  cmd.py  input.py  main.py  path.py  point.py  shape.py
src/pixel_art/depixelizer/: depixelize.py  heuristic.py  pixel_data.py
src/pixel_art/geometry/: bspline.py  path.py
src/pixel_art/io/: output.py
submission_files/: final_submission
